--- a/staticweb-service.yaml
+++ b/staticweb-service.yaml
@@ -2,14 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: staticweb
-  name: staticweb
+    app: cafeapp
+  name: cafeapp
 spec:
   type: NodePort
   ports:
     - port: 80
       targetPort: 80
       protocol: TCP
-      nodeport: 30069
   selector:
-    app: staticweb
+    app: cafeapp
